# grpc-spec-bfv

./: .gitignore  build_stats.py  check_stats.py  r.json  statics.py  t.json  temp_routes.py  unused.json  vehicle_stats.json  weapons_stats.json
grpc-v2/: PrivateGames.proto  auth.proto  inventory.proto  pyproject.toml  stats.proto
python-client/: Readme.md  accessToken.py  grpcClient.py  main.py  pyproject.toml  sample.json
python-client/grpc_client_bfv/: accessToken.py  grpcClient.py
python-client/grpc_client_bfv/proto/: PrivateGames_pb2.py  PrivateGames_pb2_grpc.py  auth_pb2_grpc.py  inventory_pb2.py  inventory_pb2_grpc.py  stats_pb2.py
python-client/proto/: PrivateGames_pb2.py  PrivateGames_pb2_grpc.py  auth_pb2.py  auth_pb2_grpc.py  inventory_pb2.py  inventory_pb2_grpc.py  stats_pb2.py  stats_pb2_grpc.py
results/: other_vehicles.json  other_weapons.json  vehicle_result.json  weapon_result.json
testing/: component.py  grpcClient.py  main.py  pyproject.toml
testing/duck_grpc_client_bfv/: accessToken.py  bfGrpc.py  component.py  grpcClient.py
