[tool.poetry]
name = "grpc-v2"
version = "0.1.0"
description = ""
authors = ["Zefanja Jobse <zefanjaj@gmail.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
