[tool.poetry]
name = "grpc-client-bfv"
version = "0.1.0"
description = ""
authors = ["Zefanja Jobse <zefanjaj@gmail.com>"]
readme = "Readme.md"
packages = [{ include = "grpc_client_bfv" }]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
httpcore = { extras = ["http2", "asyncio"], version = "^1.0.9" }
pylint = "^4.0.2"
orjson = "^3.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
