[tool.poetry]
name = "duck-grpc-client-bfv"
version = "0.1.0"
description = ""
authors = ["Zefanja Jobse <zefanjaj@gmail.com>"]
packages = [{ include = "duck_grpc_client_bfv" }]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.3"
httpcore = { extras = ["http2", "asyncio"], version = "^1.0.7" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

